--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+/* create a font face for helvetice nueue */
+@font-face {
+	font-family: "Regular";
+	src: local("HelveticaRegular"),
+		url("./fonts/Helvetica.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "Bold";
+	src: local("HelveticaBold"),
+		url("./fonts/Helvetica-Bold.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "Italic";
+	src: local("HelveticaItalic"),
+		url("./fonts/Helvetica-Oblique.ttf") format("truetype");
+}
+
+@font-face {
+	font-family: "BoldItalic";
+	src: local("HelveticaBoldItalic"),
+		url("./fonts/Helvetica-BoldOblique.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Light";
+    src: local("HelveticaLight"),
+        url("./fonts/Helvetica-Light.ttf") format("truetype");
+}
+
+/* then use the font face in the body */
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	font-family: "Regular";
+	font-size: 16px;
+	color: #03c4d2;
+	margin: 0;
+	padding: 0;
 }
